--- a/ProjectEkkoAPI/src/main/webapp/WEB-INF/web.xml
+++ b/ProjectEkkoAPI/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_4_0.xsd"
 	version="4.0">
 	<display-name>SpringMVCDemo</display-name>
-	
+
 	<!-- This is going to be needed for our ContextLoaderListener -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
@@ -14,6 +14,15 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+
+	<filter>
+		<filter-name>CorsFilter</filter-name>
+		<filter-class>com.revature.util.CorsFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>CorsFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 
 	<servlet>
 		<servlet-name>DispatcherServlet</servlet-name>
